fixed MinstrelEffect and JesterEffect